# cadis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
cadis/: __init__.py  _api.py  _cache.py  _cli.py  _country_names.py  _errors.py  _manager.py  _policy.py  _remote_sdk.py  _rest.py  _sdk.py  types.py  version.py
cadis/cdn/: __init__.py  bootstrap.py  transport.py
cadis/core/: __init__.py
cadis/runtime/: __init__.py  bootstrap.py  core_adapter.py  runtime.py  types.py
cadis/runtime/dataset/: __init__.py  loader.py
cadis/runtime/execution/: __init__.py  pipeline.py
cadis/world/: __init__.py  cgd_binary.py  cgd_world_resolver.py  global_lookup.py
cadis/world/data/: CGD_SPEC.md
docs/: cli.md  rest.md  sdk.md
tests/: test_cadis.py  test_cli.py  test_errors.py
