[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadis"
version = "0.1.0"
description = "Public facade entrypoint for Cadis global lookup"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cadis" }]
dependencies = [
  "cadis-global>=0.1.0",
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cadis = "cadis._cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cadis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
