[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cadis"
version = "0.3.4"
description = "Lat/Lon to administrative hierarchy lookup with managed datasets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cadis" }]
dependencies = [
  "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cadis = "cadis._cli:main"
cadisd = "cadis._rest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
  "cadis*",
]

[tool.setuptools.package-data]
"cadis.world" = ["data/*.cgd", "data/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
